# humanizer-portugues

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  mypy.ini  noxfile.py  pyproject.toml  setup.py
.dependabot/: config.yml
.github/: dependabot.yml
.github/workflows/: constraints.txt  dependabot.yml  release-drafter.yml  release.yml  tests.yml
.travis/: install.sh  run.sh
docs/: conf.py  index.rst
humanize/: __init__.py
humanize/locale/pt_BR/LC_MESSAGES/: humanize.mo  humanize.po
humanizer_portugues/: __init__.py  filesize.py  list.py  number.py  time.py  version.py
scripts/: install  run-tests  run.sh
src/humanizer_portugues/: __init__.py  filesize.py  list.py  number.py  time.py
tests/: __init__.py  base.py  filesize.py  list.py  number.py  test_filesize.py  test_init.py  test_list.py  test_number.py  test_time.py  time.py
