[tool.poetry]
name = "humanizer-portugues"
version = "2.3.1"
description = "Humanize functions for Portuguese."
authors = ["Thiago Carvalho D'Ávila <thiagocavila@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/staticdev/humanizer-portugues"
homepage = "https://github.com/staticdev/humanizer-portugues"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
]

[tool.poetry.dependencies]
python = "^3.7"
importlib_metadata = {version = "^1.6.0", python = "<3.8"}

[tool.poetry.dev-dependencies]
codecov = "^2.1.1"
black = "^19.10b0"
flake8 = "^3.8.1"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.0"
flake8-bugbear = "^20.1.4"
safety = "^1.9.0"
mypy = "^0.770"
pytest = "^5.4.2"
coverage = {extras = ["toml"], version = "^5.0.4"}
typeguard = "^2.7.1"
pre-commit = "^2.4.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["humanizer_portugues"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
