[tool.poetry]
name = "humanizer-portugues"
version = "2.3.4"
description = "Humanize functions for Portuguese."
authors = ["Thiago Carvalho D'Ávila <thiagocavila@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/staticdev/humanizer-portugues"
homepage = "https://github.com/staticdev/humanizer-portugues"
documentation = "https://humanizer-portugues.readthedocs.io"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
]

[tool.poetry.urls]
Changelog = "https://github.com/staticdev/humanizer-portugues/releases"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.3"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.1.4"
safety = "^1.9.0"
mypy = "^0.782"
pytest = "^6.0.1"
coverage = {extras = ["toml"], version = "^5.2"}
typeguard = "^2.9.1"
pre-commit = "^2.7.1"
pygments = "^2.6.1"
xdoctest = "^0.14.0"
sphinx = "^3.2.1"
sphinx-autobuild = "^0.7.1"
darglint = "^1.5.3"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.0.13"
pep8-naming = "^0.11.1"
pre-commit-hooks = "^3.2.0"
reorder-python-imports = "^2.3.5"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["humanizer_portugues"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
