[tool.poetry]
name = "humanizer-portugues"
version = "2.4.1"
description = "Humanize functions for Portuguese."
authors = ["Thiago Carvalho D'Ávila <thiagocavila@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/staticdev/humanizer-portugues"
homepage = "https://github.com/staticdev/humanizer-portugues"
documentation = "https://humanizer-portugues.readthedocs.io"
classifiers = [
    "Development Status :: 7 - Inactive",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.urls]
Changelog = "https://github.com/staticdev/humanizer-portugues/releases"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.11.1"
safety = "^1.10.1"
mypy = "^0.800"
pytest = "^6.2.2"
coverage = {extras = ["toml"], version = "^5.4"}
typeguard = "^2.10.0"
pre-commit = "^2.10.1"
pygments = "^2.7.3"
xdoctest = "^0.15.4"
sphinx = "^3.4.2"
sphinx-autobuild = "^2020.9.1"
darglint = "^1.6.0"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.0.14"
pep8-naming = "^0.11.1"
pre-commit-hooks = "^3.4.0"
reorder-python-imports = "^2.4.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["humanizer_portugues"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
